fix: trending cards, scrollbar, playbutton, bookmark

--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -8,8 +8,11 @@
     /* margin-left: 1%; */
     background-color: pink;
     flex: 250px;
-
 }
+.card:hover .playbutton{
+    opacity: 1;
+}
+
 
 .bgimg{
     width: 100%;
@@ -26,72 +29,69 @@
     border-radius: 30px;
     margin-left: 30%;
     margin-top: -40%;
-    background-color: #fff3;
-    /* border-width: 0;
-    border-style: solid;
-    border-color: #e5e7eb; */
+    background-color: rgba(255, 255, 255, 0.3);
     transition: ease-in-out .3s;
-    /* opacity: 0; */
-    /* z-index: 100; */
+    opacity: 0;
     
     >h4{
         height: 55%;
         width: 35%;
         margin-left: 15%;
         margin-top: 10%;
-        background-color: #fff3;
-        border-width: 0;
-        border-style: solid;
-        border-color: #e5e7eb;
+        background-color: rgba(255, 255, 255, 0.01);
     }
 }
+.playbutton:hover{
+    cursor: pointer;
+}
 .play{
-    width: 30px;
+    width: 35px;
     height: 80%;
-    margin-top: 5%;
+    margin-top: 4%;
     margin-left: 8%;
-    background-color: #fff3;
-    border-width: 0;
-    border-style: solid;
-    border-color: #e5e7eb;
+    background-color: rgba(255, 255, 255, 0.01);
+    /* opacity: 0.3; */
 }
 
 .bookmark-shade{
     position: relative;
     width: 10%;
     height: 15%;
-    margin-left: 85%;
-    margin-top: -35%;
+    margin-left: 87%;
+    margin-top: -32%;
     border-radius: 8px;
-    background-color: #00000080;
+    /* background-color: #00000080; */
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.bookmark-shade:hover{
+    cursor: pointer;
 }
 .bookmarkbutton{
     height: 60%;
     width: 60%;
     margin-top: 20%;
     margin-left: 20%;
-    background-color: inherit;
+    background-color: rgba(0, 0, 0, 0.05);
 }
 
 .subtitle{
     display: flex;
     flex-direction: row;
     height: 8%;
-    width: 56%;
-    margin-top: 48%;
-    /* align-items: center;
-    justify-content: center; */
-
+    width: 65%;
+    margin-top: 46%;
+    
     >p{
-        /* position: relative; */
         font-size: 20px;
-        margin-top: -8%;
-        /* left: 8%; */
+        margin-top: -7%;
         margin-left: 4%;
         margin-right: 4%;
         height: 1%;
         width: 10%;
         
+    }
+    h5:nth-of-type(2){
+        width: 200%;
     }
 }
 
@@ -107,4 +107,66 @@
     height: 10%;
     margin-top: 1%;
     background-color: red;
+    
+}
+
+.trending-card{
+    width: 40%;
+    height: 98.5%;
+    border-radius: 10px;
+    margin-right: 1%;
+    flex: 0 0 auto;
+    background-color: pink;
+    /* box-sizing: border-box; */
+    
+
+    .bgimg{
+        width: 100%;
+        height: 100%;
+    }
+    .subtitle{
+        position: relative;
+        top: -10%;
+        background-color: transparent;
+        margin-left: 2%;
+        width: 40%;
+
+        h5:nth-of-type(2){
+            width: 200%;
+        }
+    }
+    .title{
+        position: relative;
+        top: -10%;
+    }
+    h5{
+        background-color: rgba(255, 255, 255, 0.3);
+        border-radius: 5px;
+    }
+    .playbutton{
+        width: 25%;
+        top: 20%;
+        left: 5%;
+    }
+    .play{
+        width: 35%;
+    }
+    .bookmark-shade{
+        position: relative;
+        top: 26%;
+        margin-left: 92%;
+        width: 6%;
+        height: 13%;
+        
+    }
+    .bookmarkbutton{
+        position: relative;
+    }
+    .categoryicon{
+        background-color: transparent;
+    }
+}
+
+.trending-card:hover .playbutton{
+    opacity: 1;
 }
